--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
     justify-content: center;
     align-items: center;
 }
-.form-container form {
+form {
     margin: auto;
     padding: 10px;
     border-radius: 10px;
@@ -75,39 +75,47 @@ body {
     text-align: center;
 
 
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: rgba(0, 0, 0, 0.2);
     height: 60%;
     width: 60%;
     display: grid;
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-columns: .5fr 2fr .5fr;
-    grid-template-areas: 
-    "title title title"
-    ". task-selector ."
-    ". hour-selector ."
-    "days-container days-container days-container"
-    "btn btn btn";
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-areas:
+    ". title title ."
+    ". label-name task-selector ."
+    ". label-hour hour-selector ."
+    ". label-days . ."
+    "days-container days-container days-container days-container"
+    "btn btn btn btn";
+    
     justify-content: center;
     align-items: center;
     gap: 5px;
 }
 /* title */
-.form-container form h3 {
+form h3 {
     grid-area: title;
     font-size: 30px;
     text-transform: uppercase;
 }
 /* name */
+label[for="name"] {
+    grid-area: label-name;
+}
 .task-selector {
     grid-area: task-selector;
 }
 /* hour */
+label[for="hour"] {
+    grid-area: label-hour;
+}
 .hour-selector{
     grid-area: hour-selector;
 }
 /* days */
-.day-selector {
-    display: none;
+form label[for="days"] {
+    grid-area: label-days;
 }
 
 /* days checkbox system */
@@ -119,12 +127,6 @@ body {
     gap: 8px;
     grid-area: days-container;
     position: relative;
-    margin-top: 20px;
-}
-.days-container label {
-    font-size: 20px;
-    position: absolute;
-    top: -30px;
 }
 .days-container input[type="checkbox"] {
     appearance: none;
@@ -178,15 +180,14 @@ body {
 
 
 /* grales */
-.form-container form input{
+form input{
     border-radius: 10px;
     height: 40px;
     text-align: center;
-    /* border: solid 1px #333; */
     border: none;
 }
 /* button */
-.form-container form button {
+form button {
     grid-area: btn;
     background-color: white;
     border: none;
@@ -201,13 +202,13 @@ body {
 
     transition: all 0.1s ease-in;        
 }
-.form-container form button:hover {
+form button:hover {
     background-color: #444;
     color: #fff;
     transform: scale(1.05);
     box-shadow: 0 0 30px 10px rgba(0, 0, 0, 0.2);
 }
-.form-container form button:active {
+form button:active {
     transform: scale(0.9);
 }
 
@@ -382,4 +383,74 @@ footer a {
 }
 footer a:hover {
     text-decoration: underline;
+}
+
+.modal-container {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.modal {
+    width: 60%;
+    height: 60%;
+    background-color: #888;
+    border-radius: 10px;
+    padding: 20px;
+
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    grid-template-areas: 
+    ". title title ."
+    ". label-name task-selector ."
+    ". label-hour hour-selector ."
+    ". label-days . ."
+    "days-container days-container days-container days-container"
+    ". btns btns ."
+    ;
+}
+.btn-container-modal {
+    grid-area: btns;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 20px;
+}
+.btn-container-modal .save-changes-modal {
+    background-color: rgb(136, 201, 40);
+    color: #000;
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    
+    width: 150px;
+    height: 50px;
+    transition: all .25s;
+} 
+.btn-container-modal .save-changes-modal:hover {
+    background-color: rgb(87, 122, 33);
+    color: #fff;
+    transform: scale(1.025);
+    box-shadow: 0 0 10px 2px rgb(87, 122, 33);
+}
+.btn-container-modal .dismiss-changes-modal {
+    background-color: crimson;
+    color: #000;
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    
+    width: 150px;
+    height: 50px;
+    transition: all .25s;
+}
+.btn-container-modal .dismiss-changes-modal:hover {
+    background-color: brown;
+    color: #fff;
+    transform: scale(1.025);
+    box-shadow: 0 0 10px 2px brown;
 }
